Add POC for Mongo Db connection [WILL NOT WORK BECAUSE MONGODB IS NOT YET SETUP ON THE SERVER]

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings" : {
+    "MongoDb" : "mongodb://harjot:abcd1234@ds117816.mlab.com:17816/heroku_b8j01p9m"
+},
+
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
