KS-Adding two controllers, Repository for TextContent and MediaContent; Adding Dummy Data and DummyData Service; Controllers are calling for data via DummyDataService. In the future all we have to add is actual call for real data and not dummy data;

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "MongoDb": "mongodb://chipino:Chipino2018@ds121406.mlab.com:21406/heroku_nfgdv54w",
+    "Database": "heroku_nfgdv54w"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
