KS-Adding connection to MongoDb, adding MongoDb service class; both service classes are now implementing common IService interface - for easier swapping in Startup file; removing connection string details from appsettings.json; updating repositories (they may be redundant in the future - don't know yet); Adding dynamic connectionString reading from Congif Vars in Heroku-this needs testing when pushed to Release;

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "MongoDb": "mongodb://chipino:Chipino2018@ds121406.mlab.com:21406/heroku_nfgdv54w",
-    "Database": "heroku_nfgdv54w"
+    "MongoDbConnection": ""
   },
   "Logging": {
     "LogLevel": {
