--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "chipinoClientUrl": "https://staging-api-chipinomeshworks.herokuapp.com/"
 }
