KS-Updating CORS to allow ANY orgin; updating client url (at least this is what I think the client url is)

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,5 @@
     }
   },
   "AllowedHosts": "*",
-  "chipinoClientUrl": "https://staging-api-chipinomeshworks.herokuapp.com/"
+  "chipinoClientUrl": "https://staging-chipino.herokuapp.com/"
 }
