--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MongoDbConnection": "mongodb+srv://chipino:chipino123@chipinocluster-bupft.mongodb.net/chipinoDB?retryWrites=true"
+    "MongoDbConnection": ""
   },
   "Logging": {
     "LogLevel": {
